enumerate/itemize refactor
From Liz Matthews. Adjusting use of \setlist to better handle large print versions.

--- a/ouexam.cls
+++ b/ouexam.cls
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{ouexam}[2021/02/10 v2.4 (Robert Brignall, all rights reserved)]
+\ProvidesClass{ouexam}[2021/08/24 v2.4.1 (Robert Brignall, all rights reserved)]
 
 %% Handles options 
 \newif\if@specimen
@@ -421,8 +421,8 @@
 
 %% Subquestion settings -- all controlled by enumerate with enumitem
 \setlist{itemsep=2pt,topsep=0pt,partopsep=0pt}
-\setlist[enumerate]{align=left,leftmargin=8mm,labelsep*=0pt}
-\setlist[itemize]{align=left,leftmargin=8mm,labelsep*=-1mm}
+\setlist[enumerate]{align=left,leftmargin=!,labelwidth=4ex,labelsep*=1.0ex}
+\setlist[itemize]{align=left,leftmargin=!,labelwidth=4ex,labelsep*=-0.25ex}
 \setlist[enumerate,1]{label=(\alph*), ref=(\alph*)}
 \setlist[enumerate,2]{label=(\roman*), ref=(\roman*),leftmargin=9mm}
 %%
