Documentation for smallmargins
Documentation for resolution to issue #76

--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -878,6 +878,12 @@ The |showsolutions| option can be used alongside the |specimen| option to provid
 This provides a large-print version for visually impaired students. Also available are |17pt| and |20pt|, and these all work with other options. These options should only be used in response to specific requests made by students, and should not be used to produce the standard exam.
 
 \begin{desc}
+|\documentclass[20pt,smallmargins]{ouexam}|
+\end{desc}
+
+The |smallmargins| option decreases the size of the left margin on all pages after the title page. This is typically only to be used in conjunction with the |20pt| option, where line length needs to be increased due to the large font size.
+
+\begin{desc}
 |\documentclass[nobarcode]{ouexam}|
 \end{desc}
 
