Bugfix: outn remark and longremark
Per #73, `\tutoronlycolor{...}` now also sets text colour for `\remark{...}` and `\begin{longremark}...\end{longremark}`.

I took this opportunity to move where `remark` and `longremark` are defined, namely next to where other tutor/student related commands are defined (rather than within marks).

--- a/outn.cls
+++ b/outn.cls
@@ -359,16 +359,19 @@
 \def\@studentcolor{\@specsolnscolor}
 \newcommand\tutoronlycolor[1]{\def\@tutorcolor{#1}}
 \newcommand\studentonlycolor[1]{\def\@studentcolor{#1}}
-%%%
 \newcommand{\tutoronly}[1]{{\color{\@tutorcolor}#1}}
 \newenvironment{tutor}{\color{\@tutorcolor}\@tutoronlytitle}{}
+\newcommand{\remark}[1]{{\color{\@tutorcolor}\emph{Remark:} #1}}
+\newenvironment{longremark}{\color{\@tutorcolor}\emph{Remarks:}\par}{}
 \newcommand{\studentonly}[1]{}
 \newenvironment{student}{\comment}{\endcomment}
 \if@specsolns
     \AtBeginDocument{
         \renewcommand{\tutoronly}[1]{}
+        \renewcommand{\remark}[1]{}
         \renewcommand{\studentonly}[1]{{\color{\@studentcolor}#1}}
         \renewenvironment{tutor}{\comment}{\endcomment}
+        \renewenvironment{longremark}{\comment}{\endcomment}
         \renewenvironment{student}{\color{\@studentcolor}\@studentonlytitle}{}
     }
 \else
@@ -413,15 +416,13 @@
 \setlist*[enumerate*,1]{label=(\roman*), ref=(\roman*)}
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Marks and remarks
+%% Marks
 %
 \if@specsolns%
   	% suppress everything in specimen solutions
   	\newcommand{\bracketedmarks}[2][]{\relax}
   	\newcommand{\solnmarks}[2][]{\relax}
   	\newcommand{\solnmarksplus}[2]{\relax}
-  	\newcommand{\remark}[1]{\relax}
-  	\newenvironment{longremark}{\comment}{\endcomment}
 \else%
 	% Not specimen solutions
 	% Bracketed marks - not really used in outn
@@ -456,8 +457,6 @@
 	}	
 	%	
   	\newcommand{\solnmarksplus}[2]{\solnmarks[#2]{#1}}
-  	\newcommand{\remark}[1]{\emph{Remark:} #1}
-  	\newenvironment{longremark}{\emph{Remarks:}\par}{}
 \fi
 % The standard \mk command is defined in terms of solnmarks.
 % \bracketedmarks is available mainly for compatibility with ouab and ouexam.
