--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -9,7 +9,7 @@
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \modulecode{MST124}
-\session{C} % Can be omitted if "specimen" or "secondspecimen" options are on
+%\session{C} % Optional
 \moduletitle{Title of Module}
 \examcode{MST1241706F1PV1} % Generates barcode
 \examtime{10:00\,am -- 1:00\,pm}
